package smarthome.domain;

public interface AggregateRoot {

    DomainID getId();
}
