package smarthome.domain;

public interface DomainID {

    String getID();
}
