package smarthome.domain.vo.actuatorvo;

import smarthome.domain.vo.ValueObject;

public interface Settings extends ValueObject<Object[]> {
}
